<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_lang_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextColor="@color/error">

            <Button
                android:id="@+id/btn_lang_from"
                style="@style/Widget.Button.Tonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_language_from" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_lang_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/error">

            <Button
                android:id="@+id/btn_lang_to"
                style="@style/Widget.Button.Tonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_language_to" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_dialect"
            style="@style/Widget.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:textColorHint="@color/gray_500"
            app:helperText="@string/optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_dialect"
                style="@style/Widget.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialect"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_verb_time"
            style="@style/Widget.Button.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/add_verb_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:text="@string/add_verb_time_descriptional"
            android:textColor="@color/main_text"
            android:textSize="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verb_tenses_recycler_view"
            android:layout_marginTop="9dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>