<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/simpleFragment">

    <fragment
        android:id="@+id/simpleFragment"
        android:name="my.dictionary.free.view.SimplerFragment"
        android:label=""
        tools:layout="@layout/fragment_simple" />

    <fragment
        android:id="@+id/userDictionaryFragment"
        android:name="my.dictionary.free.view.user.dictionary.UserDictionaryFragment"
        android:label="@string/my_dictionaries"
        tools:layout="@layout/fragment_user_dictionary" />

    <fragment
        android:id="@+id/addUserDictionaryFragment"
        android:name="my.dictionary.free.view.user.dictionary.add.AddUserDictionaryFragment"
        android:label="@string/add_dictionary"
        tools:layout="@layout/fragment_add_new_dictionary" />

    <fragment
        android:id="@+id/languagesFragment"
        android:name="my.dictionary.free.view.user.dictionary.add.languages.LanguagesFragment"
        android:label="@string/add_language"
        tools:layout="@layout/fragment_languages" >
        <argument
            android:name="my.dictionary.free.view.user.dictionary.add.languages.LanguagesFragment.BUNDLE_LANGUAGE_TYPE_KEY"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>