<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/sorting_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sorting_a_z_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_a_z"
            android:layout_height="wrap_content" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sorting_z_a_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_z_a"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/words_count_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="9dp"
        android:text="@string/words"
        android:textColor="@color/main_text"
        android:textSize="16dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.appcompat.widget.LinearLayoutCompat>