<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name"
                style="@style/Widget.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:textColorHint="@color/gray_500"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    style="@style/Widget.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/add_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="9dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/set_duration_per_word"
                    android:textColor="@color/main_text"
                    android:textSize="16dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_add_24"
                    android:tint="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/duration_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="9dp"
                android:textColor="@color/main_text"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:text="20 seconds" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/add_dictionary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="9dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/set_dictionary"
                    android:textColor="@color/main_text"
                    android:textSize="16dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_add_24"
                    android:tint="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dictionary_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="9dp"
                android:textColor="@color/main_text"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:text="English - Ukrainian" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/reverse_dictionary"
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/reverse_dictionary"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/hide_phonetic"
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/hide_phonetic"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/show_tags"
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/show_tags"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/show_categories"
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/show_categories"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/show_types"
                style="@style/Widget.App.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/show_types"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/add_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="9dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/add_words"
                    android:textColor="@color/main_text"
                    android:textSize="16dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_add_24"
                    android:tint="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/words_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>