<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:layout_marginTop="9dp"
                android:gravity="center_vertical"
                android:text="@string/categories"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <my.dictionary.free.view.widget.bubble.BubbleLayout
                android:id="@+id/categories_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:layout_marginTop="9dp"
                android:gravity="center_vertical"
                android:text="@string/tags"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <my.dictionary.free.view.widget.bubble.BubbleLayout
                android:id="@+id/tags_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:layout_marginTop="9dp"
                android:gravity="center_vertical"
                android:text="@string/types"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <my.dictionary.free.view.widget.bubble.BubbleLayout
                android:id="@+id/types_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>